Fixed scrollbar, styling

--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -5,6 +5,10 @@
 
  /************** BASIC STYLING *****************************/
 
+ body {
+   overflow: hidden;
+ }
+
 #background {
   display: flex;
   flex-flow: column;
