--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -79,6 +79,12 @@ h1 {
   color: $red;
 }
 
+/************** UPVOTES *****************************/
+
+.sidebar {
+  border-left: 1px solid $neutral;
+}
+
 /************** MEDIA QUERIES *****************************/
 
 // Small screens
