--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -37,6 +37,8 @@ $white: #ffffff;
   right: 0;
   text-align: center;
   top: 0;
+  font-size: 1.5em;
+  font-weight: bolder;
 }
 
 [class*="block-grid-"] > li {
